--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "sirv-cli": "^1.0.0",
     "svelte-spa-router": "^3.2.0"
   }
