chore: eslint and prettier

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "validate": "svelte-check"
+    "validate": "svelte-check",
+    "lint": "eslint './src/**/*.{ts,svelte}'",
+    "lint:fix": "eslint --fix './src/**/*.{ts,svelte}'"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.8",
@@ -13,9 +15,15 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@tsconfig/svelte": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "autoprefixer": "^10.1.0",
+    "eslint": "^8.5.0",
+    "eslint-plugin-svelte3": "^3.2.1",
     "postcss": "^8.2.2",
     "postcss-load-config": "^3.0.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.5.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
