--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,13 @@
     // "resolveJsonModule": true,
     // "esModuleInterop": true,
     // "importsNotUsedAsValues": "remove",
-    "strict": true
+    "strict": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": [
+        "./*"
+      ],
+    },
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
