--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "0.21.1",
     "sirv-cli": "^1.0.0",
     "svelte-spa-router": "^3.2.0"
   }
