--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "axios": "0.21.1",
     "sirv-cli": "^1.0.0",
+    "svelte-infinite-scroll": "^2.0.0",
     "svelte-spa-router": "^3.2.0"
   },
   "__comments": [
